Increasing nav item margin to prevent layout issues

--- a/website/static/styles/header.scss
+++ b/website/static/styles/header.scss
@@ -178,7 +178,7 @@ nav.ddNavbar {
 
         @include commonLinkStyling;
 
-        margin: 0 25px 0 0;
+        margin: 0 40px 0 0;
         padding: 10px 0 0 0;
         background-color: #FFF;
         font-weight: 400;
